--- a/fullstack/package.json
+++ b/fullstack/package.json
@@ -43,5 +43,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+  "picomatch": "4.0.2"
   }
 }
